<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B0A0A"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/solution_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/result_tv"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="16sp"
        android:layout_marginBottom="16sp"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons_layout"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="16sp"
        android:layout_marginBottom="16sp"
        android:text="0"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="64sp" />

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:background="#040304"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:paddingVertical="16sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_c"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72sp"
                android:layout_height="72sp"
                android:layout_margin="12sp"
                android:onClick="backSpaceAction"
                android:text="@string/c"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:backgroundTint="#E91E63"
                app:cornerRadius="36sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_open"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72sp"
                android:layout_height="72sp"
                android:layout_margin="12sp"
                android:onClick="operationAction"
                android:text="@string/open_bracket"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:backgroundTint="#AEAAAA"
                app:cornerRadius="36sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_close"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72sp"
                android:layout_height="72sp"
                android:layout_margin="12sp"
                android:onClick="operationAction"
                android:text="@string/close_bracket"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:backgroundTint="#AEAAAA"
                app:cornerRadius="36sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_divide"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72sp"
                android:layout_height="72sp"
                android:layout_margin="12sp"
                android:backgroundTint="#FF9800"
                android:onClick="operationAction"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="36sp" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_7"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72sp"
                android:layout_height="72sp"
                android:layout_margin="12sp"
                android:onClick="numberAction"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="36sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_8"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72sp"
                android:layout_height="72sp"
                android:layout_margin="12sp"
                android:onClick="numberAction"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="36sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_9"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72sp"
                android:layout_height="72sp"
                android:layout_margin="12sp"
                android:onClick="numberAction"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="36sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multiply"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72sp"
                android:layout_height="72sp"
                android:layout_margin="12sp"
                android:backgroundTint="#FF9800"
                android:onClick="operationAction"
                android:text="@string/x"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="36sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_4"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72sp"
                android:layout_height="72sp"
                android:layout_margin="12sp"
                android:onClick="numberAction"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="36sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_5"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72sp"
                android:layout_height="72sp"
                android:layout_margin="12sp"
                android:onClick="numberAction"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="36sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_6"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72sp"
                android:layout_height="72sp"
                android:layout_margin="12sp"
                android:onClick="numberAction"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="36sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_minus"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72sp"
                android:layout_height="72sp"
                android:layout_margin="12sp"
                android:backgroundTint="#FF9800"
                android:onClick="operationAction"
                android:text="@string/minus"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:cornerRadius="36sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_1"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72sp"
                android:layout_height="72sp"
                android:layout_margin="12sp"
                android:onClick="numberAction"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="36sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_2"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72sp"
                android:layout_height="72sp"
                android:layout_margin="12sp"
                android:onClick="numberAction"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="36sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_3"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72sp"
                android:layout_height="72sp"
                android:layout_margin="12sp"
                android:onClick="numberAction"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="36sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_plus"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72sp"
                android:layout_height="72sp"
                android:layout_margin="12sp"
                android:backgroundTint="#FF9800"
                android:onClick="operationAction"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="36sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_AC"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72sp"
                android:layout_height="72sp"
                android:layout_margin="12sp"
                android:onClick="allClearAction"
                android:text="@string/ac"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="#E91E63"
                app:cornerRadius="36sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_0"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72sp"
                android:layout_height="72sp"
                android:layout_margin="12sp"
                android:onClick="numberAction"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="36sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_decimal"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72sp"
                android:layout_height="72sp"
                android:layout_margin="12sp"
                android:onClick="numberAction"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="36sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_equal"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72sp"
                android:layout_height="72sp"
                android:layout_margin="12sp"
                android:backgroundTint="#FF9800"
                android:onClick="equalsAction"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="36sp" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>